k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: issue-tracker-service
  namespace: issue-tracker
spec:
  type: ClusterIP
  selector:
    app: issue-tracker
  ports:
    - name: http
      port: 80
      targetPort: 8080
