k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: issue-tracker-ingress
  namespace: issue-tracker
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: issue-tracker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: issue-tracker-service
                port:
                  number: 80
